--- a/src/components/Planos/styles.module.scss
+++ b/src/components/Planos/styles.module.scss
@@ -7,11 +7,13 @@
     text-align: center;
   }
   .container {
-    padding: 1rem;
+    padding: 2rem;
     display: flex;
     justify-content: center;
     flex-direction: row;
     gap: 1rem;
+    margin: 0 auto;
+    max-width: 1400px;
 
     .card {
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -23,16 +25,25 @@
       align-items: center;
       justify-content: center;
       padding: 1rem;
-      gap: 1rem;
+      gap: 0.5rem;
       background-color: white;
-      width: 350px;
+      width: 100%;
+
       h1 {
+        padding: 0 1rem;
+        border-radius: 15px;
+        background-color: rgb(255, 208, 0);
+        // transform: translateY(-90%);
+
         color: black;
         font-size: 2rem;
       }
       h2 {
         color: black;
-        font-size: 2rem;
+        font-size: 3rem;
+      }
+      h3 {
+        font-size: 1rem;
       }
       a {
         button {
@@ -47,6 +58,60 @@
         }
         button:hover {
           filter: brightness(105%);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .preco {
+    h1 {
+      font-size: 2rem;
+    }
+    .container {
+      .card {
+        h1 {
+          font-size: 1.5rem;
+        }
+        h2 {
+          font-size: 1.8rem;
+        }
+        h3 {
+        }
+        a {
+          button {
+            font-size: 1rem;
+          }
+          button:hover {
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .preco {
+    h1 {
+      font-size: 2rem;
+    }
+    .container {
+      flex-direction: column;
+      .card {
+        h1 {
+          font-size: 2rem;
+        }
+        h2 {
+          font-size: 2rem;
+        }
+        h3 {
+        }
+        a {
+          button {
+          }
+          button:hover {
+          }
         }
       }
     }
