--- a/src/components/Sobre/styles.module.scss
+++ b/src/components/Sobre/styles.module.scss
@@ -8,8 +8,9 @@
     font-size: 2.5rem;
   }
   .container {
+    margin: 0 auto;
     padding: 1rem;
-
+    max-width: 1400px;
     justify-content: center;
     display: flex;
     flex-direction: row;
@@ -26,7 +27,7 @@
       align-items: center;
       padding: 1rem;
       background-color: rgb(255, 255, 255);
-      width: 500px;
+      width: 100%;
       height: 300px;
 
       p {
@@ -46,7 +47,7 @@
       align-items: center;
       padding: 1rem;
       background-color: rgb(255, 255, 255);
-      width: 500px;
+      width: 100%;
       height: 300px;
 
       h2 {
@@ -55,10 +56,10 @@
 
       .list {
         align-items: center;
-        padding: 10px;
+        padding: 0px;
         display: flex;
         flex-direction: column;
-        gap: 4px;
+        gap: 5px;
 
         h4 {
           color: rgb(0, 0, 0);
@@ -66,8 +67,11 @@
         }
 
         h6 {
-          color: rgb(82, 82, 82);
-          font-size: 1.2rem;
+          border-radius: 10px;
+          padding: 0 1rem;
+          background-color: rgb(0, 0, 0);
+          color: rgb(255, 208, 0);
+          font-size: 1.5rem;
         }
       }
     }
@@ -83,13 +87,91 @@
       align-items: center;
       padding: 1rem;
       background-color: rgb(255, 255, 255);
-      width: 500px;
+      width: 100%;
       height: 300px;
 
       .mapbox {
+        width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .sobre {
+    h1 {
+      font-size: 2rem;
+    }
+    .container {
+      // max-width: 390px;
+      flex-direction: column;
+      .card {
+        p {
+          font-size: 1rem;
+        }
+      }
+
+      .cardhf {
+        h2 {
+          font-size: 1.3rem;
+        }
+
+        .list {
+          h4 {
+            font-size: 1.3 rem;
+          }
+
+          h6 {
+            font-size: 1.2rem;
+          }
+        }
+      }
+
+      .cardloc {
+        h2 {
+          font-size: 1.3rem;
+        }
+        .mapbox {
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 767px) and (max-width: 1023px) {
+  .sobre {
+    h1 {
+      font-size: 2rem;
+    }
+    .container {
+      .card {
+        p {
+          font-size: 1rem;
+        }
+      }
+
+      .cardhf {
+        h2 {
+          font-size: 1.2rem;
+        }
+
+        .list {
+          h4 {
+            font-size: 1.2rem;
+          }
+
+          h6 {
+            font-size: 1rem;
+          }
+        }
+      }
+
+      .cardloc {
+        .mapbox {
+        }
       }
     }
   }
