--- a/src/components/Contatos/styles.module.scss
+++ b/src/components/Contatos/styles.module.scss
@@ -4,6 +4,7 @@
   background-color: rgb(255, 255, 255);
 
   h1 {
+    color: rgb(0, 0, 0);
     font-size: 2.5rem;
     text-align: center;
   }
@@ -24,7 +25,7 @@
 
       a {
         text-decoration: none;
-        color: black;
+        color: rgb(0, 0, 0);
       }
     }
 
@@ -33,6 +34,7 @@
       display: flex;
       gap: 1rem;
       img {
+        height: 350px;
         width: 100%;
       }
     }
@@ -45,6 +47,7 @@
     align-items: center;
     gap: 1rem;
     h3 {
+      color: rgb(0, 0, 0);
       font-size: 1.5rem;
       text-align: center;
     }
