--- a/src/components/Treinadores/styles.module.scss
+++ b/src/components/Treinadores/styles.module.scss
@@ -1,15 +1,11 @@
 .treinadores {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
   padding: 1rem;
   background-color: rgb(0, 0, 0);
 
   .title {
     color: rgb(255, 208, 0);
     text-align: center;
-    font-size: 5rem;
+    font-size: 2.5rem;
     font-weight: 500;
   }
 
@@ -20,25 +16,23 @@
     justify-content: center;
     gap: 1rem;
     .card {
-      box-shadow: 0 0 16px rgba(255, 255, 255, 0.5);
-
+      padding: 1rem;
+      // box-shadow: 0 0 16px rgba(255, 255, 255, 0.5);
       display: flex;
       flex-direction: column;
       gap: 0.2rem;
       border-radius: 15px;
-      background-color: rgb(255, 255, 255);
+      background-color: rgb(34, 34, 34);
       width: 350px;
-      height: 550px;
+      height: 450px;
 
       img {
-        object-fit: fill;
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
+        border-radius: 10px;
       }
 
       .cardtitle {
         text-align: center;
-        color: black;
+        color: rgb(255, 255, 255);
       }
 
       .linkwrapper {
@@ -47,6 +41,8 @@
         justify-content: center;
         gap: 1.2rem;
         .insta {
+          background: #833ab4;
+          background: linear-gradient(to right, #833ab4, #fd1d1d, #fcb045);
           display: flex;
           justify-content: center;
           align-items: center;
